- Slider/scrollbar inaccuracies fixed.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -29,6 +29,7 @@ Change Log
      - Gadget destructor will perform all deletion operations if it is called
        directly and the correct deletion queue method is bypassed.
      - Context menu shelved if the gadget that opened it gets closed.
+     - Slider/scrollbar inaccuracies fixed.
 
   - New Features:
      - Added PackedFontBase, PackedFont1 and PackedFont16 classes (proportional
