--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -48,6 +48,7 @@ Change Log
      - Added EVENT_SHELVE and EVENT_UNSHELVE events.
      - Gadgets can become modal.
      - Added Jeff's application control code to Woopsi class.
+     - Added CycleButton class.
 
   V0.31 (20080411)
   
