--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -50,6 +50,7 @@ Change Log
      - Added Jeff's application control code to Woopsi class.
      - Added CycleButton class.
      - Merged SDL loop code into Woopsi class.
+     - Buttons change colour when clicked.
 
   V0.31 (20080411)
   
