--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -37,6 +37,9 @@ Change Log
        changes to the lists don't cause crashes.
      - All attempts to dereference woopsiApplication check for NULL first.
      - Gadget::redrawDirty() clips to parent dimensions correctly.
+     - Woopsi's gadget delete queue gets processed before the VBL listeners,
+       ensuring that deleted gadgets no longer try to fire events.
+     - Deleted gadgets no longer raise events.
 	 
   - New Features:
      - Added PackedFontBase, PackedFont1 and PackedFont16 classes (proportional
