- Added ScrollingListBox class.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -23,6 +23,7 @@ Change Log
      - SkinnedScreen constructor accepts flags parameter.
      - AmigaScreen allows depth and flip buttons to be shown/hidden at will.
 	 - SkinnedScreen allows depth and flip buttons to be shown/hidden at will.
+     - Added ScrollingListBox class.
 
   V0.32 (200804327)
   
