--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -11,6 +11,9 @@ Change Log
      - Wired up SkinnedWindow depth button visibility to skin data.
      - More consistent names for SkinnedScreen button pointers.
      - Added missing GraphicsPort::drawPixel() functions.
+     - Made char pointers const-correct for devkitPro r23 compatibility.
+     - System makes copies of string data where appropriate.
+     - Removed duplicate title string pointer from window classes.
   
   - New Features:
      - ListBox rewritten to be a single gadget instead of a compound gadget.
@@ -29,6 +32,7 @@ Change Log
      - Added DimmedScreen class to the bonus folder.
      - Added Requester class.
      - Added FileRequester class to the bonus folder.
+     - Added Window and Screen setTitle() methods.
 
   V0.32 (200804327)
   
