- Added ListData class.  - Stripped option handling out of ListBox and moved it into ListData class.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -36,6 +36,7 @@ Change Log
      - Added Window and Screen setTitle() methods.
      - Added drawEllipse() to the SuperBitmap class.
      - Added drawFilledEllipse() to the SuperBitmap class.
+     - Added ListData class.
 
   V0.32 (200804327)
   
