- Updated ChangeLog.txt.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -23,7 +23,7 @@ Change Log
      - Slider grip moves one page width/height when the gutter is clicked.
      - Scrollbar buttons default to adjusting grip value by 1.
      - Gadget::addGadget() checks to see if new children want to steal the focus
-       and grant it if necessary.
+       and will grant it if necessary.
   
   - New Features:
      - ListBox rewritten to be a single gadget instead of a compound gadget.
