--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -32,6 +32,7 @@ Change Log
        pointer in Woopsi.
      - Windows drag correctly if only one co-ordinate has changed.
      - Screen title bar no longer steals focus when clicked.
+     - Text::wrap() recognises the end of a single-line string correctly.
   
   - New Features:
      - ListBox rewritten to be a single gadget instead of a compound gadget.
