- ScrollbarVertical up/down button repeats when held.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -70,6 +70,7 @@ Change Log
      - Button, AnimButton and BitmapButton all raise EVENT_ACTION events.
      - CycleGadget raises EVENT_VALUE_CHANGE events when released if the value
        has changed.
+     - ScrollbarVertical up/down button repeats when held.
 
   V0.32 (200804327)
   
