--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,6 +1,14 @@
 Change Log
 ----------
 
+  V0.33b (20080522)
+  
+  - Fixes:
+     - Fixed warnings in the AnimButton/BitmapButton constructors.
+     
+  - New Features:
+     - Added makefiles to "Hello World" examples.
+
   V0.33 (20080522)
   
   - Fixes:
@@ -76,7 +84,6 @@ Change Log
        has changed.
      - ScrollbarVertical up/down buttons repeat when held.
      - ScrollbarHorizontal left/right buttons repeat when held.
-     - Added makefiles to "Hello World" examples.
 
   V0.32 (200804327)
   
