- All gadgets have protected copy constructors.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,6 +1,13 @@
 Change Log
 ----------
 
+  V0.34
+  - Fixes:
+     - All gadgets have protected copy constructors.
+  
+  - New Features:
+
+
   V0.33b (20080522)
   
   - Fixes:
