--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -20,6 +20,7 @@ Change Log
      - Windows can no longer be dragged vertically out of non-permeable screens
        that are themselves dragged down.
      - Fixed crash when dragging screen in SDL build.
+     - Added John's fix to limit SDL screen dragging to bottom screen.
   
   - New Features:
      - FileRequester tidied up and flags parameter added to constructor.
