- Added WoopsiTimer gadget.  - Implemented key repeating in keyboard.  - Modifier keys released correctly when other key released with stylus outside key boundaries.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -20,6 +20,7 @@ Change Log
      - Added keyboard example.
      - Added TextBox::addText(char).
      - Added MultiLineTextBox::addText(char).
+     - Added WoopsiTimer gadget.
 
   V0.34 (20080702)
   
