--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -8,7 +8,9 @@ Change Log
      - Correct case of "PackedFontBase.h" include in "packedfontbase.cpp"
        (thanks Gattman, bug 2101099).
      - Removed offcolour pixels from around @ symbol in sysfont bitmap.
-  
+     - Moved @ symbol in tinyfont.bmp to correct ASCII location.
+     - SkinnedWindow class moves to front when clicked.
+	 
   - New Features:
      - Button has different appearance when disabled.
      - CheckBox has different appearance when disabled.
@@ -26,6 +28,8 @@ Change Log
      - Removed EVENT_VBL event.
      - Removed Gadget::vbl().
      - AnimButton automatically animates as it has as built-in timer gadget.
+     - Added missing glyphs to tinyfont.bmp.
+
 
   V0.34 (20080702)
   
